[project]
name = "rpad-pyg"
version = "0.1.0"
description = "A Python Package Template"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
authors = [
  {email = "baeisner@andrew.cmu.edu", name = "Ben Eisner"}
]
dependencies = [
  "torch >= 1.11.0",
  "torch-scatter >= 2.0.9",
  "torch-sparse >= 0.6",
  "torch-cluster >= 1.6.0",
  "torch-spline-conv >= 1.2.1",
  "torch-geometric >= 2.0",
  "tqdm",
]

[build-system]
requires = [
  "setuptools >= 62.3.2",
  "setuptools-scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "pytest",
  "black >= 22.3.0",
  "isort",
  "mypy",
  "pylint",
  "autoflake",
  "pre-commit",
  "jupyterlab",
]
build_docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
]

# Make setuptools only look in the src folder.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rpad = ["py.typed"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# Uncomment this when you have imports for mypy to ignore.
[[tool.mypy.overrides]]
module = [
  "torch_geometric.*",
  "tqdm.*",
]
ignore_missing_imports = true
